--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <link href="/src/css/output.css" rel="stylesheet" />
     <title>TailwindCss Example</title>
     <meta name="description" content="TailwindCss Example Description" />
+    <link rel="preload" as="image" href="/src/img/image1.webp" />
   </head>
   <body>
     <div class="overflow-hidden">
@@ -93,7 +94,7 @@
             >
               <img
                 class="w-full rounded-3xl object-cover object-center shadow-[0px_4px_20px_7px_#0000000f]"
-                src="/src/img/image-1.jpg"
+                src="/src/img/image1.webp"
                 width="27.5rem"
                 height="27.5rem"
                 alt="Main image"
@@ -102,7 +103,7 @@
                 <div class="md-text flex items-center gap-5 font-semibold">
                   <img
                     class="h-12 w-12 rounded-full object-cover object-center"
-                    src="/src/img/user.jpg"
+                    src="/src/img/user.webp"
                     alt="Laura icon"
                   />
                   <p>Laura</p>
@@ -168,7 +169,7 @@
             <!-- Item -->
             <article class="flex flex-col justify-between">
               <a
-                href="/src/img/image-2.jpg"
+                href="/src/img/image2.webp"
                 target="_blank"
                 class="relative block h-72"
               >
@@ -191,7 +192,7 @@
                 </span>
                 <img
                   class="h-full w-full rounded-xl object-cover object-center"
-                  src="/src/img/image-2.jpg"
+                  src="/src/img/image2-min.webp"
                   width="18.625rem"
                   height="18.625rem"
                   loading="lazy"
@@ -224,7 +225,7 @@
             <!-- Item -->
             <article class="flex flex-col justify-between">
               <a
-                href="/src/img/image-3.jpg"
+                href="/src/img/image3.webp"
                 target="_blank"
                 class="relative block h-72"
               >
@@ -247,7 +248,7 @@
                 </span>
                 <img
                   class="h-full w-full rounded-xl object-cover object-center"
-                  src="/src/img/image-3.jpg"
+                  src="/src/img/image3-min.webp"
                   width="18.625rem"
                   height="18.625rem"
                   loading="lazy"
@@ -282,7 +283,7 @@
             <!-- Item -->
             <article class="flex flex-col justify-between">
               <a
-                href="/src/img/image-4.jpg"
+                href="/src/img/image4.webp"
                 target="_blank"
                 class="relative block h-72"
               >
@@ -305,7 +306,7 @@
                 </span>
                 <img
                   class="h-full w-full rounded-xl object-cover object-center"
-                  src="/src/img/image-4.jpg"
+                  src="/src/img/image4-min.webp"
                   width="18.625rem"
                   height="18.625rem"
                   loading="lazy"
@@ -338,7 +339,7 @@
             <!-- Item -->
             <article class="flex flex-col justify-between">
               <a
-                href="/src/img/image-5.jpg"
+                href="/src/img/image5.webp"
                 target="_blank"
                 class="relative block h-72"
               >
@@ -361,7 +362,7 @@
                 </span>
                 <img
                   class="h-full w-full rounded-xl object-cover object-center"
-                  src="/src/img/image-5.jpg"
+                  src="/src/img/image5-min.webp"
                   width="18.625rem"
                   height="18.625rem"
                   loading="lazy"
@@ -581,7 +582,7 @@
               <!-- Item -->
               <article class="flex flex-col justify-between">
                 <a
-                  href="/src/img/image-6.jpg"
+                  href="/src/img/image6.webp"
                   target="_blank"
                   class="relative block h-72"
                 >
@@ -604,7 +605,7 @@
                   </span>
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
-                    src="/src/img/image-6.jpg"
+                    src="/src/img/image6-min.webp"
                     width="18.625rem"
                     height="18.625rem"
                     loading="lazy"
@@ -637,7 +638,7 @@
               <!-- Item -->
               <article class="flex flex-col justify-between">
                 <a
-                  href="/src/img/image-7.jpg"
+                  href="/src/img/image7.webp"
                   target="_blank"
                   class="relative block h-72"
                 >
@@ -660,7 +661,7 @@
                   </span>
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
-                    src="/src/img/image-7.jpg"
+                    src="/src/img/image7-min.webp"
                     width="18.625rem"
                     height="18.625rem"
                     loading="lazy"
@@ -695,7 +696,7 @@
               <!-- Item -->
               <article class="flex flex-col justify-between">
                 <a
-                  href="/src/img/image-8.jpg"
+                  href="/src/img/image8.webp"
                   target="_blank"
                   class="relative block h-72"
                 >
@@ -718,7 +719,7 @@
                   </span>
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
-                    src="/src/img/image-8.jpg"
+                    src="/src/img/image8-min.webp"
                     width="18.625rem"
                     height="18.625rem"
                     loading="lazy"
@@ -751,7 +752,7 @@
               <!-- Item -->
               <article class="flex flex-col justify-between">
                 <a
-                  href="/src/img/image-9.jpg"
+                  href="/src/img/image9.webp"
                   target="_blank"
                   class="relative block h-72"
                 >
@@ -774,7 +775,7 @@
                   </span>
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
-                    src="/src/img/image-9.jpg"
+                    src="/src/img/image9-min.webp"
                     width="18.625rem"
                     height="18.625rem"
                     loading="lazy"
@@ -807,7 +808,7 @@
               <!-- Item -->
               <article class="flex flex-col justify-between">
                 <a
-                  href="/src/img/image-10.jpg"
+                  href="/src/img/image10.webp"
                   target="_blank"
                   class="relative block h-72"
                 >
@@ -830,7 +831,7 @@
                   </span>
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
-                    src="/src/img/image-10.jpg"
+                    src="/src/img/image10-min.webp"
                     width="18.625rem"
                     height="18.625rem"
                     loading="lazy"
@@ -863,7 +864,7 @@
               <!-- Item -->
               <article class="flex flex-col justify-between">
                 <a
-                  href="/src/img/image-11.jpg"
+                  href="/src/img/image11.webp"
                   target="_blank"
                   class="relative block h-72"
                 >
@@ -886,7 +887,7 @@
                   </span>
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
-                    src="/src/img/image-11.jpg"
+                    src="/src/img/image11-min.webp"
                     width="18.625rem"
                     height="18.625rem"
                     loading="lazy"
@@ -919,7 +920,7 @@
               <!-- Item -->
               <article class="flex flex-col justify-between">
                 <a
-                  href="/src/img/image-12.jpg"
+                  href="/src/img/image12.webp"
                   target="_blank"
                   class="relative block h-72"
                 >
@@ -942,7 +943,7 @@
                   </span>
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
-                    src="/src/img/image-12.jpg"
+                    src="/src/img/image12-min.webp"
                     width="18.625rem"
                     height="18.625rem"
                     loading="lazy"
@@ -977,7 +978,7 @@
               <!-- Item -->
               <article class="flex flex-col justify-between">
                 <a
-                  href="/src/img/image-13.jpg"
+                  href="/src/img/image13.webp"
                   target="_blank"
                   class="relative block h-72"
                 >
@@ -1000,7 +1001,7 @@
                   </span>
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
-                    src="/src/img/image-13.jpg"
+                    src="/src/img/image13-min.webp"
                     width="18.625rem"
                     height="18.625rem"
                     loading="lazy"
@@ -1044,7 +1045,7 @@
               <!-- Item -->
               <article class="flex flex-col justify-between">
                 <a
-                  href="/src/img/image-6.jpg"
+                  href="/src/img/image6.webp"
                   target="_blank"
                   class="relative block h-72"
                 >
@@ -1067,7 +1068,7 @@
                   </span>
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
-                    src="/src/img/image-6.jpg"
+                    src="/src/img/image6-min.webp"
                     width="18.625rem"
                     height="18.625rem"
                     loading="lazy"
@@ -1100,7 +1101,7 @@
               <!-- Item -->
               <article class="flex flex-col justify-between">
                 <a
-                  href="/src/img/image-7.jpg"
+                  href="/src/img/image7.webp"
                   target="_blank"
                   class="relative block h-72"
                 >
@@ -1123,7 +1124,7 @@
                   </span>
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
-                    src="/src/img/image-7.jpg"
+                    src="/src/img/image7-min.webp"
                     width="18.625rem"
                     height="18.625rem"
                     loading="lazy"
@@ -1158,7 +1159,7 @@
               <!-- Item -->
               <article class="flex flex-col justify-between">
                 <a
-                  href="/src/img/image-8.jpg"
+                  href="/src/img/image8.webp"
                   target="_blank"
                   class="relative block h-72"
                 >
@@ -1181,7 +1182,7 @@
                   </span>
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
-                    src="/src/img/image-8.jpg"
+                    src="/src/img/image8-min.webp"
                     width="18.625rem"
                     height="18.625rem"
                     loading="lazy"
@@ -1214,7 +1215,7 @@
               <!-- Item -->
               <article class="flex flex-col justify-between">
                 <a
-                  href="/src/img/image-9.jpg"
+                  href="/src/img/image9.webp"
                   target="_blank"
                   class="relative block h-72"
                 >
@@ -1237,7 +1238,7 @@
                   </span>
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
-                    src="/src/img/image-9.jpg"
+                    src="/src/img/image9-min.webp"
                     width="18.625rem"
                     height="18.625rem"
                     loading="lazy"
@@ -1281,7 +1282,7 @@
               <!-- Item -->
               <article class="flex flex-col justify-between">
                 <a
-                  href="/src/img/image-10.jpg"
+                  href="/src/img/image10.webp"
                   target="_blank"
                   class="relative block h-72"
                 >
@@ -1304,7 +1305,7 @@
                   </span>
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
-                    src="/src/img/image-10.jpg"
+                    src="/src/img/image10-min.webp"
                     width="18.625rem"
                     height="18.625rem"
                     loading="lazy"
@@ -1337,7 +1338,7 @@
               <!-- Item -->
               <article class="flex flex-col justify-between">
                 <a
-                  href="/src/img/image-11.jpg"
+                  href="/src/img/image11.webp"
                   target="_blank"
                   class="relative block h-72"
                 >
@@ -1360,7 +1361,7 @@
                   </span>
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
-                    src="/src/img/image-11.jpg"
+                    src="/src/img/image11-min.webp"
                     width="18.625rem"
                     height="18.625rem"
                     loading="lazy"
@@ -1393,7 +1394,7 @@
               <!-- Item -->
               <article class="flex flex-col justify-between">
                 <a
-                  href="/src/img/image-12.jpg"
+                  href="/src/img/image12.webp"
                   target="_blank"
                   class="relative block h-72"
                 >
@@ -1416,7 +1417,7 @@
                   </span>
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
-                    src="/src/img/image-12.jpg"
+                    src="/src/img/image12-min.webp"
                     width="18.625rem"
                     height="18.625rem"
                     loading="lazy"
@@ -1451,7 +1452,7 @@
               <!-- Item -->
               <article class="flex flex-col justify-between">
                 <a
-                  href="/src/img/image-13.jpg"
+                  href="/src/img/image13.webp"
                   target="_blank"
                   class="relative block h-72"
                 >
@@ -1474,7 +1475,7 @@
                   </span>
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
-                    src="/src/img/image-13.jpg"
+                    src="/src/img/image13-min.webp"
                     width="18.625rem"
                     height="18.625rem"
                     loading="lazy"
@@ -1761,6 +1762,6 @@
         </div>
       </footer>
     </div>
-    <script src="/src/js/script.js"></script>
+    <script src="/src/js/script.min.js"></script>
   </body>
 </html>
