--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/src/css/output.css" rel="stylesheet" />
+    <link href="css/output.css" rel="stylesheet" />
     <title>TailwindCss Example</title>
     <meta name="description" content="TailwindCss Example Description" />
-    <link rel="preload" as="image" href="/src/img/image1.webp" />
+    <link rel="preload" as="image" href="img/image1.webp" />
   </head>
   <body>
     <div class="overflow-hidden">
@@ -94,7 +94,7 @@
             >
               <img
                 class="w-full rounded-3xl object-cover object-center shadow-[0px_4px_20px_7px_#0000000f]"
-                src="/src/img/image1.webp"
+                src="img/image1.webp"
                 width="27.5rem"
                 height="27.5rem"
                 alt="Main image"
@@ -103,7 +103,7 @@
                 <div class="md-text flex items-center gap-5 font-semibold">
                   <img
                     class="h-12 w-12 rounded-full object-cover object-center"
-                    src="/src/img/user.webp"
+                    src="img/user.webp"
                     alt="Laura icon"
                   />
                   <p>Laura</p>
@@ -169,7 +169,7 @@
             <!-- Item -->
             <article class="flex flex-col justify-between">
               <a
-                href="/src/img/image2.webp"
+                href="img/image2.webp"
                 target="_blank"
                 class="relative block h-72"
               >
@@ -192,7 +192,7 @@
                 </span>
                 <img
                   class="h-full w-full rounded-xl object-cover object-center"
-                  src="/src/img/image2-min.webp"
+                  src="img/image2-min.webp"
                   width="18.625rem"
                   height="18.625rem"
                   loading="lazy"
@@ -225,7 +225,7 @@
             <!-- Item -->
             <article class="flex flex-col justify-between">
               <a
-                href="/src/img/image3.webp"
+                href="img/image3.webp"
                 target="_blank"
                 class="relative block h-72"
               >
@@ -248,7 +248,7 @@
                 </span>
                 <img
                   class="h-full w-full rounded-xl object-cover object-center"
-                  src="/src/img/image3-min.webp"
+                  src="img/image3-min.webp"
                   width="18.625rem"
                   height="18.625rem"
                   loading="lazy"
@@ -283,7 +283,7 @@
             <!-- Item -->
             <article class="flex flex-col justify-between">
               <a
-                href="/src/img/image4.webp"
+                href="img/image4.webp"
                 target="_blank"
                 class="relative block h-72"
               >
@@ -306,7 +306,7 @@
                 </span>
                 <img
                   class="h-full w-full rounded-xl object-cover object-center"
-                  src="/src/img/image4-min.webp"
+                  src="img/image4-min.webp"
                   width="18.625rem"
                   height="18.625rem"
                   loading="lazy"
@@ -339,7 +339,7 @@
             <!-- Item -->
             <article class="flex flex-col justify-between">
               <a
-                href="/src/img/image5.webp"
+                href="img/image5.webp"
                 target="_blank"
                 class="relative block h-72"
               >
@@ -362,7 +362,7 @@
                 </span>
                 <img
                   class="h-full w-full rounded-xl object-cover object-center"
-                  src="/src/img/image5-min.webp"
+                  src="img/image5-min.webp"
                   width="18.625rem"
                   height="18.625rem"
                   loading="lazy"
@@ -582,7 +582,7 @@
               <!-- Item -->
               <article class="flex flex-col justify-between">
                 <a
-                  href="/src/img/image6.webp"
+                  href="img/image6.webp"
                   target="_blank"
                   class="relative block h-72"
                 >
@@ -605,7 +605,7 @@
                   </span>
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
-                    src="/src/img/image6-min.webp"
+                    src="img/image6-min.webp"
                     width="18.625rem"
                     height="18.625rem"
                     loading="lazy"
@@ -638,7 +638,7 @@
               <!-- Item -->
               <article class="flex flex-col justify-between">
                 <a
-                  href="/src/img/image7.webp"
+                  href="img/image7.webp"
                   target="_blank"
                   class="relative block h-72"
                 >
@@ -661,7 +661,7 @@
                   </span>
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
-                    src="/src/img/image7-min.webp"
+                    src="img/image7-min.webp"
                     width="18.625rem"
                     height="18.625rem"
                     loading="lazy"
@@ -696,7 +696,7 @@
               <!-- Item -->
               <article class="flex flex-col justify-between">
                 <a
-                  href="/src/img/image8.webp"
+                  href="img/image8.webp"
                   target="_blank"
                   class="relative block h-72"
                 >
@@ -719,7 +719,7 @@
                   </span>
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
-                    src="/src/img/image8-min.webp"
+                    src="img/image8-min.webp"
                     width="18.625rem"
                     height="18.625rem"
                     loading="lazy"
@@ -752,7 +752,7 @@
               <!-- Item -->
               <article class="flex flex-col justify-between">
                 <a
-                  href="/src/img/image9.webp"
+                  href="img/image9.webp"
                   target="_blank"
                   class="relative block h-72"
                 >
@@ -775,7 +775,7 @@
                   </span>
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
-                    src="/src/img/image9-min.webp"
+                    src="img/image9-min.webp"
                     width="18.625rem"
                     height="18.625rem"
                     loading="lazy"
@@ -808,7 +808,7 @@
               <!-- Item -->
               <article class="flex flex-col justify-between">
                 <a
-                  href="/src/img/image10.webp"
+                  href="img/image10.webp"
                   target="_blank"
                   class="relative block h-72"
                 >
@@ -831,7 +831,7 @@
                   </span>
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
-                    src="/src/img/image10-min.webp"
+                    src="img/image10-min.webp"
                     width="18.625rem"
                     height="18.625rem"
                     loading="lazy"
@@ -864,7 +864,7 @@
               <!-- Item -->
               <article class="flex flex-col justify-between">
                 <a
-                  href="/src/img/image11.webp"
+                  href="img/image11.webp"
                   target="_blank"
                   class="relative block h-72"
                 >
@@ -887,7 +887,7 @@
                   </span>
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
-                    src="/src/img/image11-min.webp"
+                    src="img/image11-min.webp"
                     width="18.625rem"
                     height="18.625rem"
                     loading="lazy"
@@ -920,7 +920,7 @@
               <!-- Item -->
               <article class="flex flex-col justify-between">
                 <a
-                  href="/src/img/image12.webp"
+                  href="img/image12.webp"
                   target="_blank"
                   class="relative block h-72"
                 >
@@ -943,7 +943,7 @@
                   </span>
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
-                    src="/src/img/image12-min.webp"
+                    src="img/image12-min.webp"
                     width="18.625rem"
                     height="18.625rem"
                     loading="lazy"
@@ -978,7 +978,7 @@
               <!-- Item -->
               <article class="flex flex-col justify-between">
                 <a
-                  href="/src/img/image13.webp"
+                  href="img/image13.webp"
                   target="_blank"
                   class="relative block h-72"
                 >
@@ -1001,7 +1001,7 @@
                   </span>
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
-                    src="/src/img/image13-min.webp"
+                    src="img/image13-min.webp"
                     width="18.625rem"
                     height="18.625rem"
                     loading="lazy"
@@ -1045,7 +1045,7 @@
               <!-- Item -->
               <article class="flex flex-col justify-between">
                 <a
-                  href="/src/img/image6.webp"
+                  href="img/image6.webp"
                   target="_blank"
                   class="relative block h-72"
                 >
@@ -1068,7 +1068,7 @@
                   </span>
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
-                    src="/src/img/image6-min.webp"
+                    src="img/image6-min.webp"
                     width="18.625rem"
                     height="18.625rem"
                     loading="lazy"
@@ -1101,7 +1101,7 @@
               <!-- Item -->
               <article class="flex flex-col justify-between">
                 <a
-                  href="/src/img/image7.webp"
+                  href="img/image7.webp"
                   target="_blank"
                   class="relative block h-72"
                 >
@@ -1124,7 +1124,7 @@
                   </span>
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
-                    src="/src/img/image7-min.webp"
+                    src="img/image7-min.webp"
                     width="18.625rem"
                     height="18.625rem"
                     loading="lazy"
@@ -1159,7 +1159,7 @@
               <!-- Item -->
               <article class="flex flex-col justify-between">
                 <a
-                  href="/src/img/image8.webp"
+                  href="img/image8.webp"
                   target="_blank"
                   class="relative block h-72"
                 >
@@ -1182,7 +1182,7 @@
                   </span>
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
-                    src="/src/img/image8-min.webp"
+                    src="img/image8-min.webp"
                     width="18.625rem"
                     height="18.625rem"
                     loading="lazy"
@@ -1215,7 +1215,7 @@
               <!-- Item -->
               <article class="flex flex-col justify-between">
                 <a
-                  href="/src/img/image9.webp"
+                  href="img/image9.webp"
                   target="_blank"
                   class="relative block h-72"
                 >
@@ -1238,7 +1238,7 @@
                   </span>
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
-                    src="/src/img/image9-min.webp"
+                    src="img/image9-min.webp"
                     width="18.625rem"
                     height="18.625rem"
                     loading="lazy"
@@ -1282,7 +1282,7 @@
               <!-- Item -->
               <article class="flex flex-col justify-between">
                 <a
-                  href="/src/img/image10.webp"
+                  href="img/image10.webp"
                   target="_blank"
                   class="relative block h-72"
                 >
@@ -1305,7 +1305,7 @@
                   </span>
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
-                    src="/src/img/image10-min.webp"
+                    src="img/image10-min.webp"
                     width="18.625rem"
                     height="18.625rem"
                     loading="lazy"
@@ -1338,7 +1338,7 @@
               <!-- Item -->
               <article class="flex flex-col justify-between">
                 <a
-                  href="/src/img/image11.webp"
+                  href="img/image11.webp"
                   target="_blank"
                   class="relative block h-72"
                 >
@@ -1361,7 +1361,7 @@
                   </span>
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
-                    src="/src/img/image11-min.webp"
+                    src="img/image11-min.webp"
                     width="18.625rem"
                     height="18.625rem"
                     loading="lazy"
@@ -1394,7 +1394,7 @@
               <!-- Item -->
               <article class="flex flex-col justify-between">
                 <a
-                  href="/src/img/image12.webp"
+                  href="img/image12.webp"
                   target="_blank"
                   class="relative block h-72"
                 >
@@ -1417,7 +1417,7 @@
                   </span>
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
-                    src="/src/img/image12-min.webp"
+                    src="img/image12-min.webp"
                     width="18.625rem"
                     height="18.625rem"
                     loading="lazy"
@@ -1452,7 +1452,7 @@
               <!-- Item -->
               <article class="flex flex-col justify-between">
                 <a
-                  href="/src/img/image13.webp"
+                  href="img/image13.webp"
                   target="_blank"
                   class="relative block h-72"
                 >
@@ -1475,7 +1475,7 @@
                   </span>
                   <img
                     class="h-full w-full rounded-xl object-cover object-center"
-                    src="/src/img/image13-min.webp"
+                    src="img/image13-min.webp"
                     width="18.625rem"
                     height="18.625rem"
                     loading="lazy"
@@ -1762,6 +1762,6 @@
         </div>
       </footer>
     </div>
-    <script src="/src/js/script.min.js"></script>
+    <script src="js/script.min.js"></script>
   </body>
 </html>
